# judge-cli

./: .coveragerc  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: test.yml
judge/: __init__.py  __main__.py  configure.py  download.py  schema.py  testcase.py  testing.py
judge/rendering/: history.py  summary.py
judge/tools/: comparator.py  config.py  download.py  format.py  prompt.py  testing.py  utils.py
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
tests/: test_add_testcase.py  test_configure.py  test_download.py  test_main.py  test_testing.py
tests/rendering/: test_history.py  test_summary.py
tests/tools/: test_comparator.py  test_format.py  test_prompt.py  test_testing.py  test_utils.py
