[tool.poetry]
name = "judge"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
repository="https://github.com/tokusumi/judge-cli.git"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
online-judge-api-client = "^10.8.0"
pydantic = "^1.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
autoflake = "^1.4"

[tool.poetry.scripts]
judge = "judge.__init__:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
